CLOSED FIXED 37110
[Qt] Maemo5 theme - wrong spelling
https://bugs.webkit.org/show_bug.cgi?id=37110
Summary [Qt] Maemo5 theme - wrong spelling
Luiz Agostini
Reported 2010-04-05 13:19:57 PDT
[Qt] Maemo5 theme - wrong spelling
Attachments
Patch (973 bytes, patch)
2010-04-05 13:28 PDT, Luiz Agostini
no flags
Luiz Agostini
Comment 1 2010-04-05 13:28:04 PDT
Kenneth Rohde Christiansen
Comment 2 2010-04-05 13:29:32 PDT
Comment on attachment 52564 [details] Patch Didn't you test your earlier patch? or how did this fall though?
Luiz Agostini
Comment 3 2010-04-05 13:31:24 PDT
I had a stale .o. Will do a clean build next time. Sorry.
WebKit Commit Bot
Comment 4 2010-04-05 23:01:58 PDT
Comment on attachment 52564 [details] Patch Clearing flags on attachment: 52564 Committed r57126: <http://trac.webkit.org/changeset/57126>
WebKit Commit Bot
Comment 5 2010-04-05 23:02:07 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 6 2010-04-06 03:15:15 PDT
Revision r57126 cherry-picked into qtwebkit-2.0 with commit 839d8709327f925aacb3b6362c06152594def97e
Note You need to log in before you can comment on or make changes to this bug.