2010-04-05  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Maemo5 theme - wrong spelling
        https://bugs.webkit.org/show_bug.cgi?id=37110

        Correcting wrong spelling in RenderThemeQt.cpp.

        * platform/qt/RenderThemeQt.cpp:

Canonical link: https://commits.webkit.org/48419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57126 268f45cc-cd09-0410-ab3c-d52691b4dbfc