WebCore/platform/qt/RenderThemeQt.cpp
@@ -43,7 +43,7 @@
 #include "HTMLMediaElement.h"
 #include "HTMLNames.h"
 #ifdef Q_WS_MAEMO_5
-#include "Maemo5webstyle.h"
+#include "Maemo5Webstyle.h"
 #endif
 #include "NotImplemented.h"
 #include "Page.h"
